@@ -44,21 +44,28 @@ have to be added to the project: one for Docutils itself (the
 Language Module Names
 =====================
 
-Language modules are named using a case-insensitive language
-identifier as defined in `RFC 1766`_, converting hyphens to
-underscores [#]_.  A typical language identifier consists of a
-2-letter language code from `ISO 639`_ (3-letter codes can be used if
-no 2-letter code exists; RFC 1766 is currently being revised to allow
-3-letter codes).  The language identifier can have an optional subtag,
+Language modules are named using `language tags`_ as defined in
+`BCP 47`_. [#]_ in lowercase, converting hyphens to underscores [#]_.
+
+A typical language identifier consists of a 2-letter language code
+from `ISO 639`_ (3-letter codes can be used if no 2-letter code
+exists). The language identifier can have an optional subtag,
 typically for variations based on country (from `ISO 3166`_ 2-letter
 country codes).  If no language identifier is specified, the default
 is "en" for English.  Examples of module names include ``en.py``,
 ``fr.py``, ``ja.py``, and ``pt_br.py``.
 
+.. [#] BCP stands for 'Best Current Practice', and is a persistent
+   name for a series of RFCs whose numbers change as they are updated.
+   The latest RFC describing language tag syntax is RFC 5646, Tags for
+   the Identification of Languages, and it obsoletes the older RFCs
+   4646, 3066 and 1766.
+
 .. [#] Subtags are separated from primary tags by underscores instead
    of hyphens, to conform to Python naming rules.
 
-.. _RFC 1766: http://www.faqs.org/rfcs/rfc1766.html
+.. _language tags: http://www.w3.org/International/articles/language-tags/
+.. _BCP 47: http://www.rfc-editor.org/rfc/bcp/bcp47.txt
 .. _ISO 639: http://www.loc.gov/standards/iso639-2/englangn.html
 .. _ISO 3166: http://www.iso.ch/iso/en/prods-services/iso3166ma/
    02iso-3166-code-lists/index.html
